@@ -1,9 +1,0 @@
-# $Id: en-GB.plg_system_legacy.ini
-# Joomla! Project
-# Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
-# License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-# Note : All ini files need to be saved as UTF-8 - No BOM
-
-USE LEGACY URL ROUTING=Use Legacy URL Routing
-IF YES, USE LEGACY URL ROUTING MECHANISM=If yes, use legacy URL routing mechanism.
-PROVIDES LEGACY SUPPORT FOR OLDER VERSION OF JOOMLA!=Provides Legacy Support for older versions of Joomla!
