@@ -1,7 +1,0 @@
-# $Id$
-# Joomla! Project
-# Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
-# License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-# Note : All ini files need to be saved as UTF-8 - No BOM
-
-EMPTY_BLOG=There are no Articles to display.
