@@ -1,13 +1,0 @@
-# $Id$
-# Joomla! Project
-# Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
-# License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-# Note : All ini files need to be saved as UTF-8 - No BOM
-
-COUNT=Count
-DESCSECTIONS=The Section Module shows a list of all Sections configured in your database. The Sections refer here to the Article Sections only. If the parameter <em>Show Unauthorised Links</em> is set to No, the list will be limited to the Sections the user's access level permits them to see.
-MOD_SECTIONS=<em>mod_sections</em>
-SECTIONS=Sections
-SHOW UNAUTHORIZED LINKS=Show Unauthorised Links
-THE NUMBER OF ITEMS TO DISPLAY (DEFAULT IS 5)=The number of Sections to display  (the default is five).
-TIPLINKS=If set to NO, the list will be limited to the Sections the User's access level permits them to see.
